    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
17-Jun-2003
Additions:
    1. A new class CookieProperties now supports relaxing cookie matching rules for path, domain, or both.
    2. It is now possible to define a CookieListener on CookieProperties to watch for cookie rejection events

23-May-2002
Problems fixed:
    1. bug #721989: scripts did not see id attributes of form controls.
    2. bug #741965: cookies with explicit domain attributes are being rejected when their host is of the form HD
                    where D is the explicit domain attribute and H contains a dot. Apparently, most browsers ignore this
                    rule. Now, so does HttpUnit, if CookieProperties.setDomainMatchingStrict( false ) is called.

22-May-2003
Problems fixed:
    1. bug #722788: WebForm.submit() was not invoking the 'onClick' event of the specified submit button.
    2. bug #734133: javascript: URLs were ignored if "javascript:" is not all lower case.

 2-May-2003
Acknowledgements:
    Thanks to David D. Kilzer for creating thorough tests for URLs containing navigation and showing a way to handle them.
Additions:
    1. JUnitServlet now supports a value of 'xml' for the format parameter, generating a format compatible with
       ant's XMLResultFormatter
    2. Form.getOptions() now works for radio buttons and checkboxes - as long as the desired name is located after the control.
Problems fixed:
    1. bug #717280: URLs with "../" in them were not resolved properly
    2. bug #717640: <base> element was not being handled in the case when no host was specified.
    3. When setting a selection control, HttpUnit would always select a value matching its first option if possible,
       rather than taking the first valid value.

 4-Apr-2003 1.5.3
Acknowledgements:
    Thanks to Andrew Bickerton for:
          correcting the handling of document.open for non-HTML pages and new pages with base tags,